# Xorricane

./: .gitmodules  CMakeLists.txt  CMakeLists.txt.m4ri  Changelog.md  Dockerfile  Dockerfile_arch  README.md  TODO.md  build.sh  build_algattack.sh  build_all.sh  callgrind.out.1551  docker_solve.sh  docker_xorricane  massif_profiling.sh  perf_profiling.sh  qp_rand.xnf  solve_hf.sh  solve_hfd.sh  valgrind_profiling.sh
src/: CMakeLists.txt  CMakeLists.txt.m4ri  cls.hpp  cls_watch.hpp  cls_watch_resolver.cpp  cls_watch_resolver.hpp  io.cpp  io.hpp  lin_sys.cpp  lin_sys.hpp  lin_sys_lazy.cpp  lin_sys_lazy.hpp  lineral.cpp  lineral.hpp  lineral_watch.cpp  lineral_watch.hpp  main.cpp  misc.cpp  misc.hpp  solve.cpp  solve.hpp  solver.cpp  solver.hpp
src/emhash/: hash_table8.hpp
src/order_heap/: heap.h  vec.h
src/xlit/: xcls.cpp  xcls.hpp  xcls_watch.cpp  xcls_watch.hpp  xcls_watch_resolver.cpp  xcls_watch_resolver.hpp  xlit.cpp  xlit.hpp  xlit_watch.cpp  xlit_watch.hpp  xsys.cpp  xsys.hpp  xsys_manager.cpp  xsys_manager.hpp
src/xornado/: impl_graph.cpp  impl_graph.hpp  misc.hpp
src/xornado/LA/: lineqs.cpp  lineqs.hpp
src/xornado/graph/: graph.hpp  graph_al.hpp
src/xornado/vl/: vl.hpp  vl_hmap.hpp  vl_trie.cpp  vl_trie.hpp
tests/: benchmark.cpp  test_cls_watch.cpp  test_impl_graph.cpp  test_lin_sys.cpp  test_lin_sys_lazy.cpp  test_lineral.cpp  test_lineral_watch.cpp  test_solve.cpp  test_sres.cpp  test_xcls_watch.cpp  test_xlit.cpp  test_xlit_watch.cpp  test_xsys.cpp
tests/instances/2xnfs/: enocoro_s4_mixed_quad.xnf  test71.xnf  test72.xnf  test73.xnf  test_ascon.xnf  test_bivium.xnf  test_read.xnf  test_simon.xnf  test_simon_2.xnf
tests/instances/2xnfs/cdcl/: test0.xnf  test1.xnf  test2.xnf  test3.xnf  test4.xnf  tmpzw1cx_np.xnf
tests/instances/xnfs/: test1.xnf  test10.xnf  test11.xnf  test12.xnf  test13.xnf  test14.xnf  test2.xnf  test3.xnf  test4.xnf  test5.xnf  test6.xnf  test7.xnf  test8.xnf  test9.xnf  test_hard.xnf  test_prince.xnf
